Attempt to fix whitespace issue on mobile

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -698,23 +698,6 @@ a {
 .cid-su1iYBP25x img {
   width: 100%;
 }
-.cid-sN0uWl84Bg {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  background-image: url("../../../assets/images/mbr-1920x1082.jpg");
-}
-.cid-sN0uWl84Bg .mbr-text,
-.cid-sN0uWl84Bg .mbr-section-btn {
-  color: #232323;
-}
-.cid-sN0uWl84Bg .card-title,
-.cid-sN0uWl84Bg .card-box {
-  color: #ffffff;
-}
-.cid-sN0uWl84Bg .mbr-text,
-.cid-sN0uWl84Bg .link-wrap {
-  color: #ffffff;
-}
 .cid-su1gk8lsir {
   padding-top: 5rem;
   padding-bottom: 3rem;
@@ -1411,93 +1394,62 @@ a {
   margin: 0;
   padding-bottom: 100px;
 }
-.cid-sMksOTiYWT {
-  padding-top: 0rem;
-  padding-bottom: 3rem;
-  background-color: #c8deea;
+.cid-sOptEj0SJI {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  overflow: hidden;
+  background-color: #002a40;
 }
-.cid-sMksOTiYWT img {
-  max-width: 140px;
-  margin: auto;
+.cid-sOptEj0SJI .title__block {
+  margin-bottom: 40px;
 }
-.cid-sMksOTiYWT .card {
-  background: white;
-  padding: 2rem 0;
-  transition: all 0.3s;
-  cursor: pointer;
+.cid-sOptEj0SJI .mbr-section-subtitle {
+  letter-spacing: 1.5px;
+  margin-bottom: 20px;
+  color: #c0c0c9;
 }
-.cid-sMksOTiYWT .card:hover {
-  transform: scale(0.9);
+.cid-sOptEj0SJI .mbr-section-title {
+  color: #e7f8ff;
 }
-.cid-sMksOTiYWT .mbr-text {
-  max-width: 700px;
-  color: #1a449a;
+.cid-sOptEj0SJI .mbr-section-title span {
+  font-weight: 300;
 }
-.cid-sMksOTiYWT .mbr-section-title {
-  color: #353535;
-  text-align: center;
+.cid-sOptEj0SJI .image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #c8deea;
+  border-radius: 50%;
+  box-shadow: 15px 30px 50px 0px rgba(233, 236, 241, 0.5);
+  margin: 0 auto 25px;
+  transition: all 0.4s ease-in-out;
 }
-.cid-sMksOTiYWT .svg-top {
-  width: 100%;
-  position: absolute;
-  left: 0;
-  top: -48px;
-  height: 50px;
-  transform-origin: bottom;
-  animation: 1.5s ease-in-out infinite alternate svg-wave;
-  fill: #81afca;
+.cid-sOptEj0SJI .image img {
+  height: auto;
+  width: 100px;
 }
-.cid-sMksOTiYWT .svg-top .st0 {
-  fill: #c8deea;
+.cid-sOptEj0SJI .image:hover {
+  transform: scale(1.1);
 }
-@media (max-width: 992px) {
-  .cid-sMksOTiYWT .svg-top {
-    width: 1000px;
-  }
+.cid-sOptEj0SJI .image175 {
+  width: 175px;
+  height: 175px;
 }
-.cid-sMksPDkllC {
-  padding-top: 0rem;
-  padding-bottom: 3rem;
-  background-color: #c8deea;
+.cid-sOptEj0SJI .image120 {
+  width: 120px;
+  height: 120px;
 }
-.cid-sMksPDkllC img {
-  max-width: 140px;
-  margin: auto;
+.cid-sOptEj0SJI .image150 {
+  width: 150px;
+  height: 150px;
 }
-.cid-sMksPDkllC .card {
-  background: white;
-  padding: 2rem 0;
-  transition: all 0.3s;
-  cursor: pointer;
+.cid-sOptEj0SJI .image140 {
+  width: 140px;
+  height: 140px;
 }
-.cid-sMksPDkllC .card:hover {
-  transform: scale(0.9);
-}
-.cid-sMksPDkllC .mbr-text {
-  max-width: 700px;
-  color: #1a449a;
-}
-.cid-sMksPDkllC .mbr-section-title {
-  color: #353535;
-  text-align: center;
-}
-.cid-sMksPDkllC .svg-top {
-  width: 100%;
-  position: absolute;
-  left: 0;
-  top: -48px;
-  height: 50px;
-  transform-origin: bottom;
-  animation: 1.5s ease-in-out infinite alternate svg-wave;
-  fill: #81afca;
-}
-.cid-sMksPDkllC .svg-top .st0 {
-  fill: #c8deea;
-}
-@media (max-width: 992px) {
-  .cid-sMksPDkllC .svg-top {
-    width: 1000px;
-  }
+.cid-sOptEj0SJI .image200 {
+  width: 200px;
+  height: 200px;
 }
 .cid-su1gr9jP6M {
   padding-top: 1rem;
